Add content script react example

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,11 +1,34 @@
 @import "@ziloen/tailwind-config/preset.css" theme(inline);
 
+@theme {
+  --font-noto-sans-sc:
+    'Noto Sans SC Variable',
+    'ui-sans-serif',
+    'system-ui',
+    'sans-serif',
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol',
+    'Noto Color Emoji';
+  --font-fira-code:
+    'Fira Code Variable',
+    'ui-monospace',
+    'SFMono-Regular',
+    'Menlo',
+    'Monaco',
+    'Consolas',
+    'Liberation Mono',
+    'Courier New',
+    'monospace';
+}
+
 
 @layer base {
 
   /* 清除外部可继承属性（例如 text-align）的影响 */
   :host {
     all: revert;
+    font-family: --theme(--font-noto-sans-sc);
   }
 
   *,
