--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -47,4 +47,17 @@
   body {
     margin: 0;
   }
+
+  /* Chrome 会给所有 extension 页面注入如下 style，需要重置一下
+      body {
+        font-family: "Segoe UI", Tahoma, sans-serif;
+        font-size: 75%;
+      }
+   */
+  /* https://stackoverflow.com/questions/69923665 */
+  /* https://stackoverflow.com/questions/71480433 */
+  body {
+    font-family: --theme(--font-noto-sans-sc);
+    font-size: 16px;
+  }
 }
